# monastery

./: .gitignore  CMakeLists.txt  MonasteryEditor.cpp  MonasteryEditor.h  MonasteryFrame.cpp  MonasteryFrame.h  README.md  build-appimage.sh  main.cpp  rebuild.sh  release.sh  resources.qrc
AppDir/: .DirIcon  AppRun  Monastery.desktop
AppDir/usr/lib/: libQt6PrintSupport.so.6  libavahi-client.so.3  libavahi-common.so.3  libgnutls.so.30  libgomp.so.1  libhunspell-1.7.so.0  libpng16.so.16  libtasn1.so.6
AppDir/usr/share/applications/: Monastery.desktop
Docs/: Monastery_AutoSave.html
